# oeis-offline-matcher

./: .gitignore  AGENTS.md  LICENSE_OEIS.md  README.md  TODO.md  config.example.toml  pyproject.toml
docs/: FAQ.md  architecture.md  notebook_combo.ipynb  notebook_template.ipynb
scripts/: bench.py  bench_build.py  fetch_oeis_data.sh  profile_matchers.py
src/oeis_matcher/: api.py  build_index.py  candidates.py  cli.py  combination_search.py  config.py  matcher.py  models.py  oeis_data.py  query.py  ranking.py  similarity.py  storage.py  sync.py  transform_search.py  transforms.py
src/oeis_matcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_api.py  test_cli_presets.py  test_combination_search.py  test_config.py  test_index_and_match.py  test_integration_mini_oeis.py  test_keywords.py  test_matcher_edges.py  test_parsers.py  test_ranking.py  test_similarity.py  test_sync.py  test_transform_search.py  test_transforms_ops.py  test_wildcards.py
tests/data/mini_oeis/: keywords.txt  names.txt  stripped.txt
