[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oeis-matcher"
version = "0.0.1"
description = "Offline OEIS matcher with transform search"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.scripts]
oeis = "oeis_matcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
